--- a/src/OffDotnet.CLI/OffDotnet.CLI.csproj
+++ b/src/OffDotnet.CLI/OffDotnet.CLI.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="System.CommandLine" />
+      <PackageReference Include="System.CommandLine.DragonFruit" />
+      <PackageReference Include="System.CommandLine.Rendering" />
     </ItemGroup>
 
 </Project>
